完善API功能